--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -17,7 +17,7 @@
     <string name="wind_direction_north_west">СЗ</string>
 
     <string name="action_settings">Настройки</string>
-    <string name="appwidget_text">EXAMPLE</string>
+    <string name="appwidget_text">NULL</string>
     <string name="configure">Configure</string>
     <string name="add_widget">Add widget</string>
     <string name="app_widget_description">This is an app widget description</string>
