--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="weather_updated">Updated: </string>
     <string name="rain_mm">mm</string>
     <string name="pressure_mm_Hg">mm Hg</string>
+    <string name="weather_icon_description">Weather icon</string>
 </resources>
